<resources>
    <string name="app_name">itNoodle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tên Sinh Viên</string>
    <string name="nav_header_subtitle">ma_sinh_vien@vnu.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_announce">Tin Tức</string>
    <string name="title_scoreboard">Bảng điểm</string>
    <string name="title_profile">Thông tin cá nhân</string>
    <string name="title_mycourse">Môn học của tôi</string>
    <string name="lang_en">English</string>
    <string name="lang_vn">Việt Nam</string>
    <string name="prompt_code">Mã sinh viên</string>
    <string name="prompt_term">Học kỳ (vd: 1)</string>
    <string name="prompt_year">Năm học (vd: 2017-2018)</string>
    <string name="label_fullname">Họ và tên</string>
    <string name="label_klass">Lớp</string>
    <string name="label_birthday">Ngày sinh</string>
    <string name="btn_login">Cập nhật thông tin</string>
    <string name="error_invalid_student_code">Mã không hợp lệ</string>
    <string name="error_invalid_term">Học kỳ là 1 hoặc 2</string>
    <string name="error_invalid_year">Năm học không hợp lệ</string>
    <string name="course_label_credit">Tín chỉ</string>
    <string name="course_label_group">Nhóm</string>
    <string name="course_label_note">Ghi chú</string>
    <string name="course_no_finaltest_label">Chưa có lịch thi</string>
    <string name="course_no_scoreboard_label">Chưa có điêm thi</string>
    <string name="course_have_scoreboard_label">Đã có điểm thi</string>
    <string name="course_finaltest_time_label">Thời gian thi: </string>
    <string name="course_finaltest_room_label">Địa điểm thi: </string>
    <string name="course_finaltest_type_label">Hình thức: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
